supplemental/implicit-parameters/implicit-parameters.bnf
# Using extended BNF notation
# The following is the CFG for the implicit parameters coeffect system

<prog> ::= <decl>* ';' <expr> .

# Declarations
<decl> ::= <fun_decl>
         | <val_decl> .

<fun_decl> ::= 'fun' id <param>+ ':' <type> '=' <expr> .
<param> ::= '(' id ':' <type> ')' <imps>?

<val_decl> ::= 'val' id '=' <expr> .

# Implicit Parameters
<imps> ::= '{' <imps_inner> '}' .
<imps_inner> ::= <imp> (',' <imp>)* | . 
<imp>  ::= imp_id ':' <type> .

# Types
<type> ::= <base_type> | <base_type> <imps>? '->' <type> .

<base_type> ::= 'int' 
              | 'unit' 
              | '(' <type> ')' .

# Expressions  
<expr> ::= <letdyn> 
         | <add> .

<letdyn> ::= 'letdyn' imp_id '=' <expr> 'in' <expr> .

<add> ::= <app> ( '+' <app> )* .

<app> ::= <simple>+

<simple> :: id 
          | int
          | imp_id
          | unit
          | "(" <expr> ")" .
